fix table_wrap min height

--- a/web/module/catalog/catalog.css
+++ b/web/module/catalog/catalog.css
@@ -53,7 +53,7 @@
   float: left;
   margin: 5px;
   max-width: 100%;
-  min-height: 150px;
+  min-height: 160px;
   border-radius: 20px;
   padding: 5px;
   -webkit-box-sizing: border-box;
